config/objects/Shipment_Reference__c.object
<CustomObject>
    <fields>
        <fullName>Shipment__c</fullName>
        <label>Shipment</label>
        <referenceTo>Shipment__c</referenceTo>
        <relationshipLabel>Shipment References</relationshipLabel>
        <relationshipName>Shipment_References</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type_Pretty__c</fullName>
        <formula>if(isblank(text(Type__c)),&quot;None&quot;,text(Type__c))</formula>
        <label>Type_Pretty</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>PO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ORDER NUMBER</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Shipment Reference</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SR-{0000000}</displayFormat>
        <label>Shipment Reference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipment References</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Type_Must_Have_a_Value</fullName>
        <active>true</active>
        <errorConditionFormula>and(not(isblank(text(Type__c))),isblank(Value__c))</errorConditionFormula>
        <errorMessage>References with types must also have values.</errorMessage>
    </validationRules>
</CustomObject>